--- a/09_Bioproject.ipynb
+++ b/09_Bioproject.ipynb
@@ -49,6 +49,38 @@
   },
   {
    "cell_type": "markdown",
+   "id": "04f7e1d7",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "## GEO Datasets (GSE)\n",
+    "\n",
+    "- Contienen experimentos completos de expresión génica, como microarrays o RNA-seq.\n",
+    "- Cada dataset se identifica con un ID tipo GSEXXXX.\n",
+    "- Incluye varias muestras (cada una con un GSM), información de diseño experimental, y a menudo está enlazado con un BioProject."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35b79770",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "source": [
+    "## GEO Profiles\n",
+    "\n",
+    "- Son perfiles individuales de expresión de un gen extraídos de los GEO Datasets.\n",
+    "- Cada perfil (GDSXXXX) representa cómo se expresa un gen a lo largo de las muestras de un dataset.\n",
+    "- Es decir, 1 GSE (dataset) ➝ muchos GEO Profiles (uno por gen)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "432b6b56",
    "metadata": {},
    "source": [
@@ -65,6 +97,24 @@
    "source": [
     "### RUN selector\n",
     "\n",
+    "El **RUN selector** del NCBI es una herramienta que permite explorar y\n",
+    "seleccionar datos de secuenciación asociados a un proyecto o estudio específico.\n",
+    "Proporciona una interfaz interactiva donde se pueden filtrar y visualizar los\n",
+    "datos disponibles, como las plataformas de secuenciación utilizadas, el número\n",
+    "de lecturas generadas, y el tamaño total de los datos.\n",
+    "\n",
+    "Funciona de la siguiente manera:\n",
+    "\n",
+    "1. **Búsqueda**: Se ingresa un identificador de proyecto (por ejemplo, un\n",
+    "   BioProject o BioSample) o palabras clave relacionadas.\n",
+    "2. **Visualización**: Muestra una tabla con los datos de secuenciación\n",
+    "   disponibles, incluyendo información como el ID del RUN (SRRXXXXXXX), la\n",
+    "   plataforma de secuenciación, y el tamaño de los datos.\n",
+    "3. **Selección**: Permite seleccionar los RUNs de interés para su descarga o\n",
+    "   análisis.\n",
+    "4. **Exportación**: Se pueden exportar los IDs seleccionados para utilizarlos\n",
+    "   con herramientas como el SRA Toolkit.\n",
+    "\n",
     "[Bioproject](https://www.ncbi.nlm.nih.gov/bioproject/)"
    ]
   },
@@ -75,7 +125,21 @@
    "source": [
     "### SRA Toolkit\n",
     "\n",
-    "[SRA Toolkit](https://trace.ncbi.nlm.nih.gov/Traces/sra/sra.cgi?view=software)"
+    "El **SRA Toolkit** es un conjunto de herramientas:\n",
+    "- Descargar, procesar y convertir datos almacenados en el Sequence Read Archive (SRA).\n",
+    "- Estas herramientas permiten trabajar con grandes volúmenes de datos de secuenciación de manera eficiente.\n",
+    "\n",
+    "#### Funcionalidades principales:\n",
+    "- **Descarga de datos**: Permite descargar archivos SRA directamente desde el repositorio.\n",
+    "- **Conversión de formatos**: Convierte archivos SRA a formatos más comunes como FASTQ para su análisis.\n",
+    "- **Gestión de datos**: Facilita la extracción y manipulación de datos específicos dentro de un archivo SRA.\n",
+    "\n",
+    "#### Herramientas incluidas:\n",
+    "- `prefetch`: Descarga archivos SRA desde el repositorio.\n",
+    "- `fasterq-dump`: Convierte archivos SRA en archivos FASTQ de manera rápida y eficiente.\n",
+    "- `sam-dump`: Extrae datos en formato SAM para análisis de alineación.\n",
+    "\n",
+    "Más información y descarga: [SRA Toolkit](https://github.com/ncbi/sra-tools/wiki/01.-Downloading-SRA-Toolkit)\n"
    ]
   },
   {
